# PrettyZk

./: .gitignore  Dockerfile  README.md  README_CN.md  build.gradle  package-lock.json  package.json  settings.gradle
.github/workflows/: build-mac-arm64.yml  build-mac-x64.yml  build-win-arm64.yml  build-win-x64.yml  release.yml
app/: build.gradle
app/src/main/java/: module-info.java
app/src/main/java/cc/cc1234/: Application.java
app/src/main/resources/web/: index.html
app/src/main/resources/web/assets/: LogViewer-4-3lsBAe.css  LogViewer-BjkuvDgJ.css  LogViewer-CI6eh9S_.js  LogViewer-CXdDuHsq.js  LogViewer-Ce_9Xh8w.css  LogViewer-CpCj6LW8.js  LogViewer-VWRV2gHq.js  LogViewer-pmTjo8AA.js  NodeBrowser-1mwqSktg.js  NodeBrowser-BSEouHqq.css  NodeBrowser-C5ZAAgiC.css  NodeBrowser-D4EVh25Z.js  NodeBrowser-D55G4AIq.js  NodeBrowser-D8Jn05rd.js  NodeBrowser-DSg6NVE5.css  NodeBrowser-Der2Vsa_.js  index-B8hT_q-Y.js  index-BAfiFpDr.css  (+15 more)
config/checkstyle/: checkstyle.xml
scripts/: build-installer.sh  installer.nsi
specification/: build.gradle
specification-impl/src/main/java/: module-info.java
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.win.conf.json
src-tauri/src/: main.rs
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.vue  api.js  api.ts  env.d.ts  i18n.js  i18n.ts  main.ts  style.css
webapp/src/components/: CodeEditor.vue  DetailPanel.vue  Dialog.vue  DialogForm.vue  LogViewer.vue  NodeBrowser.vue  ServerForm.vue  Sidebar.vue  TerminalApp.vue  Toast.vue  TreeNode.vue  WelcomeScreen.vue
(+23 files in other folders)
